# imgui-app-template

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: glfw.cmake  glm.cmake
imgui/: CMakeLists.txt  gl_loader.cpp  gl_loader.hpp
imgui/gl3w/: CMakeLists.txt
utils/: RollingBuffer.hpp  Window.cpp  Window.hpp
